content and rough styling for jumbotron

--- a/index.html
+++ b/index.html
@@ -2,4 +2,30 @@
 layout: default
 ---
 
-main content
+<section class="jumbotron jumbotron-fluid">
+
+  <div class="container text-center">
+    <h1 class="display-4 hidden-md-up">
+      We make government work in a digital world
+    </h1>
+
+    <h1 class="display-4 hidden-sm-down">
+      We make government <br/> work in a digital world
+    </h1>
+
+    <p class="lead hidden-md-up">
+      Skylight is a HUBZone digital consultancy, using design, technology,
+      and procurement to enable government success in the digital age.
+    </p>
+
+    <p class="lead hidden-sm-down">
+      Skylight is a HUBZone digital consultancy, using design, technology,
+      <br/> and procurement to enable government success in the digital age.
+    </p>
+
+    <a class="btn btn-outline-primary btn-lg text-uppercase font-weight-bold" href="/hire-us" role="button" target="_blank">
+      Let's talk
+    </a>
+  </div>
+
+</section>
