--- a/index.html
+++ b/index.html
@@ -5,27 +5,221 @@ layout: default
 <section class="jumbotron jumbotron-fluid">
 
   <div class="container text-center">
-    <h1 class="display-4 hidden-md-up">
+    <h1 class="display-3 hidden-md-up">
       We make government work in a digital world
     </h1>
 
-    <h1 class="display-4 hidden-sm-down">
-      We make government <br/> work in a digital world
+    <h1 class="display-1 hidden-sm-down">
+      We make government <br /> work in a digital world
     </h1>
 
-    <p class="lead hidden-md-up">
+    <p class="lead-2 hidden-md-up">
       Skylight is a HUBZone digital consultancy, using design, technology,
       and procurement to enable government success in the digital age.
     </p>
 
-    <p class="lead hidden-sm-down">
+    <p class="lead-1 hidden-sm-down">
       Skylight is a HUBZone digital consultancy, using design, technology,
-      <br/> and procurement to enable government success in the digital age.
+      <br /> and procurement to enable government success in the digital age.
     </p>
 
-    <a class="btn btn-outline-primary btn-lg text-uppercase font-weight-bold" href="/hire-us" role="button" target="_blank">
+    <a class="btn btn-primary btn-lg text-uppercase font-weight-bold" href="/hire-us" role="button" target="_blank">
       Let's talk
     </a>
+  </div>
+
+</section>
+
+<section class="container section-lp">
+
+  <div class="row mb-4">
+    <div class="col">
+      <h2 class="display-3">
+        Solving important problems
+      </h2>
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col-md-10 col-lg-7 mx-auto">
+      <p>
+        Every day millions of people &mdash; from veterans to immigrants &mdash;
+        depend on government services to fulfill their needs. But too often
+        these services are delivered using outmoded policies, practices,
+        and technologies, resulting in frustrating user experiences and
+        inefficient use of taxpayer dollars.
+      </p>
+
+      <p>
+        Enter Skylight, a HUBZone-certified digital consultancy based out of
+        Chapel Hill, North Carolina. We’re the founders behind successful startups
+        inside and outside of government, including 18F and TalkTo.
+      </p>
+
+      <p>
+        Our mission is to make government work in a digital world using
+        design, technology, and procurement.
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <a class="btn btn-outline-primary btn-lg" href="/about" role="button" target="_blank">
+        About us
+      </a>
+    </div>
+  </div>
+
+</section>
+
+<section class="container section-lp">
+
+  <div class="row mb-4">
+    <div class="col">
+      <h2 class="display-3">
+        Services designed for your success
+      </h2>
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col-md-10 col-lg-7 mx-auto">
+      <p>
+        To succeed in today’s public-service environment, you need to think
+        and be digital. But getting there often requires fundamental practice,
+        culture, and technology change. And that means institutionalizing modern
+        disciplines such as human-centered design, lean-agile engineering, data science,
+        and modular contracting.
+      </p>
+
+      <p>
+        We offer services in a number of areas to accelerate your journey to
+        becoming a digital-first agency: Digital Services Delivery, Digital Procurement,
+        and Digital Transformation.
+      </p>
+
+      <p>
+        These services are designed not only to deliver results, but to also
+        transfer our knowledge of modern principles and practices to you.
+        To facilitate this learning process, we employ a unique practice called
+        embedded instructional design. Even further, <a href="/guilds">our guilds</a> (communities of practice)
+        make all of our delivery assets (for example, methodologies) completely free, open,
+        and accessible to you.
+      </p>
+
+      <p>
+        <strong>How we work with you</strong> is as important as what we work on together.
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <a class="btn btn-outline-primary btn-lg" href="/services" role="button" target="_blank">
+        Our services
+      </a>
+    </div>
+  </div>
+
+</section>
+
+<section class="container section-lp">
+
+  <div class="row mb-4">
+    <div class="col">
+      <h2 class="display-3">
+        Experience that speaks volumes
+      </h2>
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col-md-10 col-lg-7 mx-auto">
+      <p>
+        As a company, we may be new, but we bring a wealth of individual
+        and team experience. We co-founded and scaled 18F, built and sold
+        technology startups, created standards that power the internet, and saved
+        the federal government from hundreds of millions in unnecessary tech costs.
+        We’re eager, excited, and honored to see what we can do for you.
+      </p>
+
+      <p>
+        We’re eager, excited, and honored to see what we can do for you.
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <a class="btn btn-outline-primary btn-lg" href="/work" role="button" target="_blank">
+        Our work
+      </a>
+    </div>
+  </div>
+
+</section>
+
+<section class="container section-lp">
+
+  <div class="row mb-4">
+    <div class="col">
+      <h2 class="display-3 hidden-md-up">
+        Strengthening your culture through ours
+      </h2>
+
+      <h2 class="display-1 hidden-sm-down">
+        Strengthening your culture <br /> through ours
+      </h2>
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col-md-10 col-lg-7 mx-auto">
+      <p>
+        Our culture is designed to empower you to succeed in a digital world.
+        We invest heavily in hiring great people, maxmizing their potential through
+        continous development, and empowering them to serve you excellently.
+      </p>
+
+      <p>
+        While our "corporate" strategy and methods can be copied
+        (in fact, we encourage it), our culture can’t be.
+        It’s what makes us unique.
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <a class="btn btn-outline-primary btn-lg" href="/culture" role="button" target="_blank">
+        Our culture
+      </a>
+    </div>
   </div>
 
 </section>
