--- a/index.html
+++ b/index.html
@@ -202,8 +202,11 @@ layout: default
     <div class="col-md-10 col-lg-7 mx-auto">
       <p>
         Our culture is designed to empower you to succeed in a digital world.
-        We invest heavily in hiring great people, maxmizing their potential through
-        continous development, and empowering them to serve you excellently.
+      </p>
+
+      <p>
+        We focus heavily on hiring and developing great people so you can reap
+        the benefits of world-class digital consulting talent.
       </p>
 
       <p>
