finished initial structure, content, and styling for landing page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="jumbotron jumbotron-fluid">
+<section class="jumbotron jumbotron-fluid mb-0">
 
   <div class="container text-center">
     <h1 class="display-3 hidden-md-up">
@@ -32,7 +32,7 @@ layout: default
 
 <section class="container section-lp">
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col">
       <h2 class="display-3">
         Solving important problems
@@ -40,13 +40,13 @@ layout: default
     </div>
   </div>
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col">
       <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
     </div>
   </div>
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col-md-10 col-lg-7 mx-auto">
       <p>
         Every day millions of people &mdash; from veterans to immigrants &mdash;
@@ -81,7 +81,7 @@ layout: default
 
 <section class="container section-lp">
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col">
       <h2 class="display-3">
         Services designed for your success
@@ -89,13 +89,13 @@ layout: default
     </div>
   </div>
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col">
       <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
     </div>
   </div>
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col-md-10 col-lg-7 mx-auto">
       <p>
         To succeed in today’s public-service environment, you need to think
@@ -138,7 +138,7 @@ layout: default
 
 <section class="container section-lp">
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col">
       <h2 class="display-3">
         Experience that speaks volumes
@@ -146,13 +146,13 @@ layout: default
     </div>
   </div>
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col">
       <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
     </div>
   </div>
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col-md-10 col-lg-7 mx-auto">
       <p>
         As a company, we may be new, but we bring a wealth of individual
@@ -179,7 +179,7 @@ layout: default
 
 <section class="container section-lp">
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col">
       <h2 class="display-3 hidden-md-up">
         Strengthening your culture through ours
@@ -191,21 +191,21 @@ layout: default
     </div>
   </div>
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col">
       <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
     </div>
   </div>
 
-  <div class="row mb-4">
+  <div class="row">
     <div class="col-md-10 col-lg-7 mx-auto">
       <p>
         Our culture is designed to empower you to succeed in a digital world.
       </p>
 
       <p>
-        We focus heavily on hiring and developing great people so you can reap
-        the benefits of world-class digital consulting talent.
+        We focus heavily on hiring and developing great people so you can
+        realize the benefits of world-class digital consulting talent.
       </p>
 
       <p>
@@ -225,3 +225,27 @@ layout: default
   </div>
 
 </section>
+
+<div class="page-cta">
+
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md col-lg-9 mx-auto">
+        <blockquote role="testimonial-box">
+          <p class="testimonial-quote">
+            You would be hard pressed to find a greater assemblage of digital talent.
+          </p>
+
+          <cite class="testimonial-cite">
+            <span class="testimonial-author">Abraham Lincoln</span>
+            <span class="testimonial-position">Former President</span>
+            <strong class="testimonial-org">United States of America</strong>
+          </cite>
+        </blockquote>
+      </div>
+    </div>
+
+  </div>
+
+</div>
