blank about page and html validation fixes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
 
   <div class="row">
     <div class="col">
-      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+      <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
     </div>
   </div>
 
@@ -91,7 +91,7 @@ layout: default
 
   <div class="row">
     <div class="col">
-      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+      <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
     </div>
   </div>
 
@@ -148,7 +148,7 @@ layout: default
 
   <div class="row">
     <div class="col">
-      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+      <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
     </div>
   </div>
 
@@ -193,7 +193,7 @@ layout: default
 
   <div class="row">
     <div class="col">
-      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+      <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
     </div>
   </div>
 
@@ -232,7 +232,7 @@ layout: default
 
     <div class="row">
       <div class="col-md col-lg-9 mx-auto">
-        <blockquote role="testimonial-box">
+        <blockquote>
           <p class="testimonial-quote">
             You would be hard pressed to find a greater assemblage of digital talent.
           </p>
