initial about us page work

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@ layout: default
 <div class="landing-page">
 
   <section class="lp-headline">
-
     <div class="lp-headline-content">
       <h1 class="hidden-md-up">
         We make government work in a digital world
@@ -25,32 +24,27 @@ layout: default
         <br /> and procurement to enable government success in the digital age.
       </p>
 
-      <a class="btn btn-primary btn-lg text-uppercase font-weight-bold" href="/hire-us" role="button" target="_blank">
+      <a class="btn btn-primary btn-lg text-uppercase font-weight-bold" href="/hire-us" role="button">
         Let's talk
       </a>
     </div>
-
   </section>
 
   <div class="lp-body">
 
-    <section class="background-statement">
-      <div class="row">
-        <div class="col">
+    <section class="lp-body-section">
+      <div class="lp-body-heading-wrapper">
+        <div class="lp-body-heading">
           <h2>
             Solving important problems
           </h2>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col">
           <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
         </div>
       </div>
 
       <div class="row">
-        <div class="lp-body-text">
+        <div class="lp-body-content">
           <p>
             Every day millions of people &mdash; from veterans to immigrants &mdash;
             depend on government services to fulfill their needs. But too often
@@ -72,33 +66,28 @@ layout: default
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
-          <a class="lp-body-cta" href="/about" role="button" target="_blank">
+      <div class="lp-body-cta-wrapper">
+        <div class="lp-body-cta">
+          <a class="lp-body-cta-btn" href="/about" role="button">
             About us
           </a>
         </div>
       </div>
     </section>
 
-    <section class="services-statement">
-
-      <div class="row">
-        <div class="col">
+    <section class="lp-body-section">
+      <div class="lp-body-heading-wrapper">
+        <div class="lp-body-heading">
           <h2>
             Services designed for your success
           </h2>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col">
           <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
         </div>
       </div>
 
-      <div class="row">
-        <div class="lp-body-text">
+      <div class="lp-body-content-wrapper">
+        <div class="lp-body-content">
           <p>
             To succeed in today’s public-service environment, you need to think
             and be digital. But getting there often requires fundamental practice,
@@ -128,34 +117,28 @@ layout: default
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
-          <a class="lp-body-cta" href="/services" role="button" target="_blank">
+      <div class="lp-body-cta-wrapper">
+        <div class="lp-body-cta">
+          <a class="lp-body-cta-btn" href="/services" role="button">
             Our services
           </a>
         </div>
       </div>
-
     </section>
 
-    <section class="experience-statement">
-
-      <div class="row">
-        <div class="col">
+    <section class="lp-body-section">
+      <div class="lp-body-heading-wrapper">
+        <div class="lp-body-heading">
           <h2>
             Experience that speaks volumes
           </h2>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col">
           <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
         </div>
       </div>
 
-      <div class="row">
-        <div class="lp-body-text">
+      <div class="lp-body-content-wrapper">
+        <div class="lp-body-content">
           <p>
             As a company, we may be new, but we bring a wealth of individual
             and team experience. We co-founded and scaled 18F, built and sold
@@ -169,20 +152,18 @@ layout: default
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
-          <a class="lp-body-cta" href="/work" role="button" target="_blank">
+      <div class="lp-body-cta-wrapper">
+        <div class="lp-body-cta">
+          <a class="lp-body-cta-btn" href="/work" role="button">
             Our work
           </a>
         </div>
       </div>
-
     </section>
 
-    <section class="culture-statement">
-
-      <div class="row">
-        <div class="col">
+    <section class="lp-body-section">
+      <div class="lp-body-heading-wrapper">
+        <div class="lp-body-heading">
           <h2 class="hidden-md-up">
             Strengthening your culture through ours
           </h2>
@@ -190,17 +171,13 @@ layout: default
           <h2 class="hidden-sm-down">
             Strengthening your culture <br /> through ours
           </h2>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col">
           <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
         </div>
       </div>
 
-      <div class="row">
-        <div class="lp-body-text">
+      <div class="lp-body-content-wrapper">
+        <div class="lp-body-content">
           <p>
             Our culture is designed to empower you to succeed in a digital world.
           </p>
@@ -218,14 +195,13 @@ layout: default
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
-          <a class="lp-body-cta" href="/culture" role="button" target="_blank">
+      <div class="lp-body-cta-wrapper">
+        <div class="lp-body-cta">
+          <a class="lp-body-cta-btn" href="/culture" role="button">
             Our culture
           </a>
         </div>
       </div>
-
     </section>
 
   </div>
