--- a/about.html
+++ b/about.html
@@ -2,3 +2,124 @@
 layout: default
 title: About Us
 ---
+
+<div class="about-us">
+
+  <section class="page-header-wrapper page-section">
+    <div class="page-header">
+      <h1 class="page-header-title">
+        We're Skylight!
+      </h1>
+
+      <div class="page-header-content">
+        <p>
+          Our mission is to make government work in a digital world.
+        </p>
+
+        <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+      </div>
+    </div>
+  </section>
+
+  <section class="page-section">
+    <div class="page-subheading-wrapper">
+      <div class="page-subheading">
+        <h2> Our story </h2>
+      </div>
+    </div>
+
+    <div class="page-content-wrapper">
+      <div class="page-content">
+        <p>
+          Skylight was founded in 2016. We're currently made up of X people and one ferret.
+          We're working hard to maintain disciplined growth while at the same time cultivating
+          an incredible culture. Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445">Chapel Hill, North Carolina</a>,
+          but we're a distributed and remote-friendly team. A lot of our client work
+          originates from Washington DC.
+        </p>
+
+        <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+
+        <p>
+          We're impact junkies who are driven to create better outcomes for the public through
+          great government digital services. We're also engineers, developers, designers,
+          product managers, consultants, writers, speakers, inventors, roboticists, gamers,
+          authors, entrepreneurs, parents, and more. Such a diverse team always gives us a
+          unique perspective on things.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="page-section">
+    <div class="page-subheading-wrapper">
+      <div class="page-subheading">
+        <h2> Certified HUBZone </h2>
+      </div>
+    </div>
+
+    <div class="page-content-wrapper">
+      <div class="page-content">
+        <p>
+          We're certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program"> Historically
+          Underutilized Business Zone (HUBZone)</a> company. This special SBA designation
+          means we're committed to revitalizing local communities through job creation.
+          In turn, we're granted privileged access to federal government contract opportunities,
+          including up to $4M per contract award.
+        </p>
+
+        <p>
+          To maintain our HUBZone status, 35% of our employees must be located in
+          <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps">
+          one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
+          number of people must be concentrated in our “principal office” location, which is in the
+          beautiful city of Chapel Hill, North Carolina. The remaining percentage of people
+          are free to live in whatever HUBZone locale they prefer. Depending on how people are
+          distributed across HUBZones, what qualifies as the greatest concentration in Chapel Hill
+          could be a majority or plurality.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="page-section">
+    <div class="page-subheading-wrapper">
+      <div class="page-subheading">
+        <h2> Always at your service </h2>
+      </div>
+    </div>
+
+    <div class="page-content-wrapper">
+      <div class="page-content">
+        <p>
+          If you have a question for us, or would just like to get in touch, drop us a
+          message on Slack or at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
+          If you’d like to inquire about hiring us for a job, <a href="/hire-us">fill out this short form</a>.
+          If you're interested in joining our team, <a href="/join">send us your information</a>.
+          If you'd like to explore forming a partnership to pursue government opportunities,
+          <a href="/alliances">let's talk</a>.
+        </p>
+
+        <p>
+          We love to share our thoughts on technology, design, procurement, business, culture,
+          and more with the world. You can <a href="/blog">read up on the our latest thinking at our
+          company blog</a>.
+        </p>
+
+        <p>
+          You can also follow along on Twitter @TBD.
+        </p>
+
+        <p>
+          Feel free to reach out directly to <a href="mailto:rob@skylight.digital">Rob Read</a>
+          or <a href="mailto:john@skylight.digital">John Teeter</a>.
+        </p>
+
+        <p>
+          Thank you for taking the time to learn more about us.
+        </p>
+      </div>
+    </div>
+  </section>
+
+</div>
