partial work on meet team section

--- a/about.html
+++ b/about.html
@@ -5,35 +5,34 @@ title: About Us
 
 <div class="about-us">
 
-  <section class="page-header-wrapper page-section">
-    <div class="page-header">
-      <h1 class="page-header-title">
-        We're Skylight!
-      </h1>
+  <section class="page-header">
+    <div class="page-header-title-wrapper">
+      <div class="page-header-title">
+        <h1> We're Skylight! </h1>
+      </div>
+    </div>
 
+    <div class="page-header-content-wrapper">
       <div class="page-header-content">
-        <p>
-          Our mission is to make government work in a digital world.
-        </p>
-
+        <p> Our mission is to make government work in a digital world. </p>
         <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
       </div>
     </div>
   </section>
 
-  <section class="page-section">
-    <div class="page-subheading-wrapper">
-      <div class="page-subheading">
+  <section class="about-section container">
+    <div class="about-subheading-wrapper">
+      <div class="about-subheading">
         <h2> Our story </h2>
       </div>
     </div>
 
-    <div class="page-content-wrapper">
-      <div class="page-content">
+    <div class="about-content-wrapper">
+      <div class="about-content">
         <p>
           Skylight was founded in 2016. We're currently made up of X people and one ferret.
           We're working hard to maintain disciplined growth while at the same time cultivating
-          an incredible culture. Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445">Chapel Hill, North Carolina</a>,
+          an incredible culture. Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445" target="_blank">Chapel Hill, North Carolina</a>,
           but we're a distributed and remote-friendly team. A lot of our client work
           originates from Washington DC.
         </p>
@@ -51,18 +50,18 @@ title: About Us
     </div>
   </section>
 
-  <section class="page-section">
-    <div class="page-subheading-wrapper">
-      <div class="page-subheading">
+  <section class="about-section container">
+    <div class="about-subheading-wrapper">
+      <div class="about-subheading">
         <h2> Certified HUBZone </h2>
       </div>
     </div>
 
-    <div class="page-content-wrapper">
-      <div class="page-content">
+    <div class="about-content-wrapper">
+      <div class="about-content">
         <p>
-          We're certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program"> Historically
-          Underutilized Business Zone (HUBZone)</a> company. This special SBA designation
+          We're certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program" target="_blank">
+          Historically Underutilized Business Zone (HUBZone)</a> company. This special SBA designation
           means we're committed to revitalizing local communities through job creation.
           In turn, we're granted privileged access to federal government contract opportunities,
           including up to $4M per contract award.
@@ -70,7 +69,7 @@ title: About Us
 
         <p>
           To maintain our HUBZone status, 35% of our employees must be located in
-          <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps">
+          <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps" target="_blank">
           one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
           number of people must be concentrated in our “principal office” location, which is in the
           beautiful city of Chapel Hill, North Carolina. The remaining percentage of people
@@ -82,15 +81,54 @@ title: About Us
     </div>
   </section>
 
-  <section class="page-section">
-    <div class="page-subheading-wrapper">
-      <div class="page-subheading">
+  <section class="about-section container-fluid">
+    <div class="about-subheading-wrapper">
+      <div class="about-subheading">
+        <h2> Meet the team </h2>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card card-outline-primary">
+          <img class="card-img-top img-fluid" src="img/employee.jpg" alt="">
+          <div class="card-block">
+            <h6 class="card-title">Johnny Awesome</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Partner</h6>
+            <p class="card-text">I do important stuff.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+      </div>
+
+      <div class="col-sm-4">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-4">
+      </div>
+
+      <div class="col-sm-4">
+      </div>
+
+      <div class="col-sm-4">
+      </div>
+    </div>
+  </section>
+
+  <section class="about-section container">
+    <div class="about-subheading-wrapper">
+      <div class="about-subheading">
         <h2> Always at your service </h2>
       </div>
     </div>
 
-    <div class="page-content-wrapper">
-      <div class="page-content">
+    <div class="about-content-wrapper">
+      <div class="about-content">
         <p>
           If you have a question for us, or would just like to get in touch, drop us a
           message on Slack or at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
@@ -111,7 +149,8 @@ title: About Us
         </p>
 
         <p>
-          Feel free to reach out directly to <a href="mailto:rob@skylight.digital">Rob Read</a>
+          Feel free to reach out directly to one of our leaders &mdash;
+          <a href="mailto:rob@skylight.digital">Rob Read</a>
           or <a href="mailto:john@skylight.digital">John Teeter</a>.
         </p>
 
