--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
             Solving important problems
           </h2>
 
-          <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
         </div>
       </div>
 
@@ -82,7 +82,7 @@ layout: default
             Services designed for your success
           </h2>
 
-          <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
         </div>
       </div>
 
@@ -133,7 +133,7 @@ layout: default
             Experience that speaks volumes
           </h2>
 
-          <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
         </div>
       </div>
 
@@ -172,7 +172,7 @@ layout: default
             Strengthening your culture <br /> through ours
           </h2>
 
-          <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
         </div>
       </div>
 
